*jabberd2-2.3.6 (06 Aug 2016)

  06 Aug 2016; Manuel Friedli <manuel@fritteli.ch> +files/jabberd2-2.3.1.pamd,
  +files/jabberd2-2.3.2.init, +files/jabberd2-2.3.2.logrotate,
  +files/jabberd2-2.3.4-optimization.patch, +jabberd2-2.3.6.ebuild,
  +metadata.xml:
  net-im/jabberd2:  added ebuild for version 2.3.6, which is missing in the
  official tree