@@ -4,6 +4,8 @@ AUX jabberd2-2.3.2.logrotate 197 SHA256 bca314e2555e113ee0916d33060c27332381cc3c
 AUX jabberd2-2.3.4-optimization.patch 627 SHA256 8a10c307846425d0ca8f987c8f46c1559f57d7fb4a448744a93637ece01577bd SHA512 2f38d9eb597f7bea21082a56eee1e28474cc66b56d5dd7de45853c98a5cdecbe7d1e5ff951b6b1395f7c27a9a2ec13c4552031b711d882fbd946338116b7d83e WHIRLPOOL aa67b5f0cbb50a81b789ced5efd0f22a2b199a4d51d1c242cde17f8317b1c2fe00d54ba0b73654bc0f7dd4fd027df83646afe5401a7f665d174faae163151be5
 AUX jabberd2-2.3.6-configure.patch 593 SHA256 39d3cdbcf57ff2247c4ca21cc130f56173a7f0db9f37f71048cae4cd9a043e15 SHA512 15e12903af39209e94b2ee42b802f93d5dc9f5d5f6dc646b65402d4445e046df02fe8150be675024a2b7f4d8f21f2cd2af1976a28c81d429be2e91c3845a327a WHIRLPOOL ef49fd6dd2158804bbd7bb93994089d2f301878ba7dcfa2d93ad77e6c4cbaa52c26e61f6191013b911ca8852f6e3d64faea2fea248dc5ddbcf5f0808cd759faf
 DIST jabberd-2.3.6.tar.xz 1503864 SHA256 33cbf58135f856f5e6e6a7769623fedfda21f0c5f88b3b687a22e04ad915c051 SHA512 c5efa443865028874e1c1f15937064edef4c1699afb14b55963e3cd86930a67dffed7830ab1ae77522cbf797ef9ab89d044ccb28ac65904ffa7e79dee155e8aa WHIRLPOOL 43f6c02d67c792fa1391cc87e7f4d60b6fe7089d8dc7796d54e0e25f1815ad29921eeb97aeb554b015261b7e5f83cd33d076abb61e60ff9fe9441971cb85bdcb
+DIST jabberd-2.4.0.tar.xz 1507452 SHA256 1101571f4a94d7ec5a82839e9e2abee51f3983e3b9c416f1b7f2f738ebebdee1 SHA512 eb621d2d76806361f54db49d1d3b2be0e0b5559f8ec64bc8ce8cd10f1455e8f4b98395cf790f969cb8ef63f2fa83f5974c5b70aaa82bbe670e1aa15a3d5a0a0b WHIRLPOOL f6e64febfc72e0d18f2063027cc764361601ab379e41bdb27a7d01f35d472a35632203f0905de8d61ef5f633f53dfa950310c20e9d7d8b69b922ed641793721c
 EBUILD jabberd2-2.3.6.ebuild 5270 SHA256 59d85fa7b59a21011e080f475ccb69bfdb0aed4b86120e64e746c03e870674db SHA512 091ed958d3e0b0e663965ae7200054f8dc3fcf8665b9232edf04c34b42081f81f80d3a13f18965d74da9ed578a96439f69468518f298fd5c555de8b5522c5274 WHIRLPOOL ddc22f6f4019a5759f8182e3524fdd14bf36083a0537bc7b3bee576845c0ccf92c424e85a806cdc85a7e3f5b5a01d9abd2e5cd26c1744044e231bf44797a8513
-MISC ChangeLog 350 SHA256 c54b729fa89c6fc316d6e82cd9c8caf39997300048a4a220faf41d314495b5fc SHA512 db9aec023709ad964f7ea1f739719ecc7ea61242a7bf5e311f1827814d85460fbcc3c92b4801e97d5ca3ada26182801a96d55310ea2a2d3e83a47b80a07aab4c WHIRLPOOL ae03b9ac67ed223b7b5315972eee4663f7d1918578075905f89a384a1325b4f46297cc3a0b8b902e23a539b37332f3c69ff23bebccb787b143d43ef207af6c57
+EBUILD jabberd2-2.4.0.ebuild 5228 SHA256 80927a0c19c7a97a3f81ba28141c90f5c0c110f661024da9c38b3244879ef865 SHA512 65ae3de033e178598a3401b585c7ba28b2e94ae55e86dc18d526f59f6800128c0ac608ff7723de85c66683a8db37a56ec74b0b2b9046038a96e6657e29462e86 WHIRLPOOL 004d08df2f8b3fdd28bc73628e1a17bbb914bdd8632285f97595b6cc6e2039e72fb8b303f1f88150e3300c6dc5b9cb9bd665706d9554c42c1ed79d764f93a5fa
+MISC ChangeLog 561 SHA256 95bb8ede7a41f3fef819599d60791d20af556ffe359bddc402896a0559525151 SHA512 50503af9d2f237d1d0d8d7cbd9aaca46feb6437f8e9a578195753b417c70f75db09c62e9304cab3fe822aa641bb2fba8c8ac9c48ffc415de5b0a5bac177b9584 WHIRLPOOL 813520ed329a67e6f3829414ceb90960d24ecb6839215c41023e15401bcbc872da8a04c33653317bf5ea678993c3e813a42dca1d4fb76c5627ce8e46d3b0f60d
 MISC metadata.xml 579 SHA256 70e01bf1f9b621d35d36cfd78ed7f99a214eadeca0dd5031adc86aff077b2023 SHA512 ebaf4fd332d1dede7f0e68e135e14c9e464b04ac22a11af32a43af91af2ec17836165d810e6fe4cab876ea33f120ef00fc9392da2c80b90813e7857c946abcda WHIRLPOOL 84043f101020e6bea68efe9be27c5d08fff6d0f06116c0643ce27b36a146068dadbb235aebe7a2d377dd9c269ece471ab4080fc1589263b315c04941c140dcf6
