@@ -1,3 +1,9 @@
+*jabberd2-2.4.0 (07 Aug 2016)
+
+  07 Aug 2016; Manuel Friedli <manuel@fritteli.ch> +jabberd2-2.4.0.ebuild:
+  net-im/jabberd2:  added ebuild for jabberd2-2.4.0, as this version is not yet
+  in the official tree.
+
 *jabberd2-2.3.6 (06 Aug 2016)
 
   06 Aug 2016; Manuel Friedli <manuel@fritteli.ch> +files/jabberd2-2.3.1.pamd,
